worked on project

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,6 @@
 @import "./styles/items.scss";
 @import "./styles/step_navigation.scss";
+@import "./styles/main_img.scss";
+@import "./styles/title.scss";
+@import "./styles/video.scss";
+@import "./styles/canvas.scss";
