--- a/src/styles/step_navigation.scss
+++ b/src/styles/step_navigation.scss
@@ -28,6 +28,17 @@
 }
 
 .circle-button:active {
-    background-color: orange;
+  background-color: orange;
 }
 
+.ability_container {
+  position: absolute;
+  top: 110vh;
+  left: 15vw;
+}
+
+.ability_description {
+  position: absolute;
+  top: 130vh;
+  left: 15vw;
+}
