worked on project

--- a/src/styles/main_img.scss
+++ b/src/styles/main_img.scss
@@ -11,13 +11,16 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 76vh;
+  height: 80vh;
   background-size: cover;
   filter: blur(8px);
   z-index: -1;
+  box-shadow: 0 0 0px transparent;
+  outline: none;
 }
 
 #final_backround_img {
   filter: brightness(10%);
   z-index: -1;
+  box-shadow: 0 0 0px transparent;
 }
