--- a/src/styles/title.scss
+++ b/src/styles/title.scss
@@ -3,10 +3,10 @@ h2 {
   top: 66vh;
   left: 40vw;
   white-space: nowrap;
-  font-size: 2vw;
   font-family: sans-serif;
   font-style: italic;
   color: white;
+  font-size: 30px;
 }
 
 h1 {
