--- a/src/index.scss
+++ b/src/index.scss
@@ -5,3 +5,4 @@
 @import "./styles/video.scss";
 @import "./styles/canvas.scss";
 @import "./styles/searchbar.scss";
+@import "./styles/button_skin.scss";
