--- a/src/styles/main_img.scss
+++ b/src/styles/main_img.scss
@@ -21,5 +21,9 @@
   height: 110vh;
   width: 104vw;
   filter: brightness(10%);
-  z-index: -1;
+  margin-bottom: -5px;  
+}
+#skin_container {
+  position: absolute;
+  top: 200vh;
 }
