--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,13 @@
-@import "./styles/items.scss";
-@import "./styles/step_navigation.scss";
-@import "./styles/main_img.scss";
-@import "./styles/title.scss";
-@import "./styles/video.scss";
-@import "./styles/canvas.scss";
-@import "./styles/searchbar.scss";
-@import "./styles/button_skin.scss";
+// @import "./styles/items.scss";
+// @import "./styles/step_navigation.scss";
+// @import "./styles/main_img.scss";
+// @import "./styles/title.scss";
+// @import "./styles/video.scss";
+// @import "./styles/canvas.scss";
+@import "./styles_v2/searchbar.scss";
+// @import "./styles/button_skin.scss";
+@import "./styles_v2/images.scss";
+@import "./styles_v2/text.scss";
+@import "./styles_v2/circle_button.scss";
+@import "./styles_v2/canvas.scss";
+@import "./styles_v2/skins.scss";
