--- a/src/styles_v2/searchbar.scss
+++ b/src/styles_v2/searchbar.scss
@@ -22,6 +22,23 @@ input[type="text"] {
   color: white;
 }
 
+.fa-github {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 2;
+  font-size: 60px;
+  color: orange;
+}
+.fa-linkedin {
+  position: fixed;
+  bottom: 0;
+  left: 80px;
+  z-index: 2;
+  font-size: 60px;
+  color: orange;
+}
+
 .fa-magnifying-glass {
   position: fixed;
   margin-top: 30px;
