--- a/src/styles_v2/images.scss
+++ b/src/styles_v2/images.scss
@@ -1,8 +1,6 @@
-
-
 #backround_img {
   width: 100%;
-  height: 100vh;
+  height: 110vh;
   position: fixed;
   top: 0;
   left: 0;
@@ -13,21 +11,22 @@
 }
 
 .banner-card {
-    display: grid;
-    place-items: center;
+  display: grid;
+  place-items: center;
 }
 
 #main_img {
   max-width: 75%;
-    // position: absolute;
-    // left: 0;
-    // right: 0;
-    // margin: auto;
-    // z-index: 0;
+  // position: absolute;
+  // left: 0;
+  // right: 0;
+  // margin: auto;
+  // z-index: 0;
 }
 
 @media (max-width: 720px) {
   #main_img {
     max-width: 110%;
+    margin-top: -2%;
   }
 }
