Fixed capitalization bug and wukong bug

--- a/src/styles_v2/searchbar.scss
+++ b/src/styles_v2/searchbar.scss
@@ -41,13 +41,13 @@ input[type="text"] {
 }
 
 @media (max-width: 720px) {
-  .fa-linkedin {
+  .linkedin_link {
     display: none;
   }
 }
 
 @media (max-width: 720px) {
-  .fa-github {
+  .github_link {
     display: none;
   }
 }
