--- a/src/styles_v2/canvas.scss
+++ b/src/styles_v2/canvas.scss
@@ -24,11 +24,11 @@
 
 .table {
   display: flex;
-  flex-wrap: wrap;
+  // flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   width: 100%;  
-  margin-left: -6%;
+  margin-left: 40   %;
   margin-right: 10%;
 }
 
