made changes to css

--- a/src/styles_v2/skins.scss
+++ b/src/styles_v2/skins.scss
@@ -5,8 +5,14 @@
 
 }
 
+.skin-container-div{
+  margin-top:200px;
+  
+}
+.skin-container-div h2{
+
+}
 #skin_container {
-  margin-top: 20%;
   display: flex;
   align-items: center;
   justify-content: center;
