--- a/src/styles_v2/circle_button.scss
+++ b/src/styles_v2/circle_button.scss
@@ -6,16 +6,6 @@
   display: inline-block;
 }
 
-.circle-button {
-  position: absolute;
-  top: 20;
-  left: 0;
-  width: 50%;
-  height: 50%;
-  border-radius: 50%;
-  background-color: gray;
-  margin-left: 23%;
-}
 
 .circle-button-container img {
   position: absolute;
@@ -23,22 +13,8 @@
   width: 100%;
 }
 
-.circle-button:hover {
-  background-color: orange;
-  cursor: pointer;
-  
-}
-.circle-button:hover + img {
-  top: -120px;
-  transition: top 0.2s ease-in-out;
+
+.circle-button-container img:hover {
   border: 2px solid orange;
-
-}
-
-.circle-button:active {
-  background-color: darkorange;
-}
-.circle-button::after {
-  background-color: darkorange;
 }
 
