--- a/src/styles_v2/text.scss
+++ b/src/styles_v2/text.scss
@@ -118,3 +118,22 @@ body {
     margin-bottom: 25%;
   }
 }
+
+
+.modal{
+  display: flex;
+  justify-content: center;
+  background-color:rgba(0,0,0,0.5);
+  height: 330vh;
+  width: 100vw;
+  position: absolute;
+  top:0;
+  left:0;
+  z-index:99;
+  font-size: 48px;
+  font-family: sans-serif;
+}
+
+.modal p{
+  margin-top:30%;
+}
